# NdkFlavor

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ryunen344/android/df/ndkflavor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/flavor1/: hello-lib.cpp
app/src/main/cpp/flavor2/: hello-lib.cpp
app/src/main/java/com/ryunen344/ndkflavor/: FromNdk.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ryunen344/android/df/ndkflavor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
